ocp/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - port: 8080
    name: http
  type: NodePort
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: web
        image: docker.io/sloppycoder/sample-api-svc
        ports:
          - containerPort: 8080
