ocp/route.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: api
    namespace: default
  spec:
    host: api-default.apps-crc.testing
    port:
      targetPort: http
    to:
      kind: Service
      name: api
